# Revette

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  log.txt  vcpkg.json
ext/: glad.c
res/shaders/: chunk_blended.slang  chunk_blended.spv  chunk_opaque.slang  chunk_opaque.spv  chunk_tested.slang  chunk_tested.spv  compile.sh  gui.slang  gui.spv
shader/: chunkShader.fs  chunkShader.vs  chunkShaderTransparent.fs  testShader.vs  textShader.fs  textShader.vs
src/: Application.cpp  Application.h  Constants.h  EntityPosition.cpp  EntityPosition.h  Exceptions.h  GameLoop.cpp  GameLoop.h  GlobalLog.cpp  GlobalLog.h  Logger.cpp  Logger.h  LoopGame.cpp  LoopGame.h  LoopTimer.cpp  LoopTimer.h  MainLoop.cpp  MainLoop.h  RenderingLoop.cpp  RenderingLoop.h  Window.cpp  Window.h  main.cpp
src/Math/: Math.h  ProbabilityTable.h
src/Rendering/: Buffer.cpp  Buffer.h  ChunkRenderer.cpp  ChunkRenderer.h  Fence.cpp  Fence.h  FrameRenderer.cpp  FrameRenderer.h  GuiRenderer.cpp  GuiRenderer.h  LinearBufferSuballocator.cpp  LinearBufferSuballocator.h  RenderResources.cpp  RenderResources.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  SingleCommandBuffer.cpp  SingleCommandBuffer.h  TileTexture.cpp  TileTexture.h  Vertex.cpp  Vertex.h  VulkanContext.cpp  VulkanContext.h  Vulkan_Headers.h  Vulkan_Utils.cpp  Vulkan_Utils.h
src/Rendering/Mesh/: MeshChunk.cpp  MeshChunk.h  MeshDataChunk.cpp  MeshDataChunk.h  MeshText.cpp  MeshText.h
src/Threading/: PlayerState.h  SharedGameRendererState.cpp  SharedGameRendererState.h  ThreadPointerQueue.h  ThreadQueue.h  ThreadQueueMeshes.cpp  ThreadQueueMeshes.h
src/World/: AxisDirection.h  Block.cpp  Block.h  BlockContainer.cpp  BlockContainer.h  BlockContainter.h  BlockHash.h  Chunk.cpp  Chunk.h  ChunkPos.cpp  ChunkPos.h  ChunkPosHash.h  ChunkStatusMap.cpp  ChunkStatusMap.h  Physics.h  StatusChunk.cpp  StatusChunk.h  World.cpp  World.h
src/World/Entities/: Entity.cpp  Entity.h  EntityPosition.cpp  EntityPosition.h
src/World/Generation/: BiomeMap.cpp  BiomeMap.h  ChunkPRNG.cpp  ChunkPRNG.h  GeneratorChunkNoise.h  GeneratorChunkParameters.h  HeightMap.cpp  HeightMap.h  NoiseSource.cpp  NoiseSource.h
src/World/Generation/Biomes/: Biomes.h
src/World/Generation/Structures/: Structure.cpp  Structure.h  StructureBoundingBox.cpp  StructureBoundingBox.h  StructurePlants.cpp  StructurePlants.h  StructuresRuins.cpp  StructuresRuins.h
